--- a/apps/material-calc/index.html
+++ b/apps/material-calc/index.html
@@ -218,7 +218,7 @@ function updateSEOContent() {
         },
         'jp': {
             title: '育成計算機 - ペルソナ5 ザ・ファントムX LufelNet',
-            description: 'ペルソナ5 ザ・ファントムX キャラクター育成素材計算機（レベル／武器／スキル／心象）'
+            description: 'ペルソナ5 ザ・ファントムX キャラクター育成素材計算機（レベル／武器／スキル／イメジャリー）'
         }
     };
     
