--- a/apps/wonder-weapon/index.html
+++ b/apps/wonder-weapon/index.html
@@ -490,7 +490,7 @@ alternate_urls:
       const lang = (typeof LanguageRouter !== 'undefined' && LanguageRouter) ? LanguageRouter.getCurrentLanguage() : 'kr';
 
       if (typeof Navigation !== 'undefined') {
-        Navigation.load('wonder-weapon', 1);
+        Navigation.load('wonderweapon', 1);
       }
       if (typeof VersionChecker !== 'undefined') {
         VersionChecker.check();
