--- a/apps/wonder-weapon/index.html
+++ b/apps/wonder-weapon/index.html
@@ -60,8 +60,8 @@ alternate_urls:
 </div>
 
 <style>
-.responsive-padding { margin-top: 20px; padding: 0 0; }
-@media (max-width: 1200px) { .responsive-padding { padding: 0; } }
+.responsive-padding { margin: 20px 20px 20px 0; padding: 0 0; }
+@media (max-width: 1200px) { .responsive-padding {margin: 20px 0 0px 0; padding: 0; } }
 </style>
 
 <script>
