--- a/apps/tactic/tactics.html
+++ b/apps/tactic/tactics.html
@@ -98,10 +98,18 @@ description: 페르소나5 더 팬텀 X 택틱들을 확인하세요.
         </div>
     </div>
 
-    <!-- 최하단 광고-->
-    <div style="height: 24px;"></div>
+    <!-- 광고 -->
+  <div class="ads-container responsive-padding">
+    <ins class="adsbygoogle"
+      style="display:block"
+      data-ad-format="fluid"
+      data-ad-layout-key="-gc+3n+7a-ag-4h"
+      data-ad-client="ca-pub-5862324369257695"
+      data-ad-slot="5373524213"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  </div>
     
-    <div id="ad-unit-bottom" class="AD-bottom" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <div id="ad-unit-bottom" class="AD-bottom" style="margin-top: 24px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
     <ins class="adsbygoogle"
         style="display:inline-block;width:728px;height:90px"
         data-ad-client="ca-pub-5862324369257695"
@@ -109,7 +117,7 @@ description: 페르소나5 더 팬텀 X 택틱들을 확인하세요.
     </div>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
-   </script>
+    </script>
     <div style="height: 12px;"></div>
     <!---->
     <style>
@@ -118,6 +126,13 @@ description: 페르소나5 더 팬텀 X 택틱들을 확인하세요.
                 display: none !important;
             }
         }
+        @media (min-width: 540px) {
+            .ads-container {
+                display: none !important;
+            }
+        }
+        .responsive-padding { margin: 20px 20px 20px 0; padding: 0 0; }
+        @media (max-width: 1200px) { .responsive-padding {margin: 20px 0 0px 0; padding: 0; } }
     </style>
 </div>
 
