--- a/apps/revelations/index.html
+++ b/apps/revelations/index.html
@@ -308,7 +308,7 @@ alternate_urls:
                 set_effect_4: "4세트"
             },
             en: {
-                language_notice: "🌍 Some translations may be inaccurate.\nIt may contain content that hasn't been released yet.",
+                language_notice: "🌍 Please let me know if you find an accurate translation.\nIt may contain content that hasn't been released yet.",
                 nav_home: "Home",
                 nav_current: "Revelations",
                 page_title: "Revelations",
@@ -327,7 +327,7 @@ alternate_urls:
                 set_effect_4: "4-Set"
             },
             jp: {
-                language_notice: "🌍 一部の翻訳が不正確な場合があります。\nまだリリースされていないコンテンツが含まれている可能性があります。",
+                language_notice: "🌍 正確な翻訳が見つかった場合は、お知らせください。\nまだリリースされていないコンテンツが含まれている可能性があります。",
                 nav_home: "ホーム",
                 nav_current: "啓示",
                 page_title: "啓示",
