--- a/apps/wonder-weapon/index.html
+++ b/apps/wonder-weapon/index.html
@@ -140,7 +140,7 @@ alternate_urls:
       }
     },
     en: {
-      language_notice: "Please let us know if you find an accurate translation.\nIt may contain content that hasn't been released yet.",
+      language_notice: "Please let me know if you find an accurate translation.\nIt may contain content that hasn't been released yet.",
       nav_home: "Home",
       nav_current: "Wonder Daggers",
       page_title: "Wonder Daggers",
