--- a/apps/material-calc/index.html
+++ b/apps/material-calc/index.html
@@ -158,7 +158,7 @@ description: P5X 캐릭터 육성 재료 계산기 (레벨/무기/스킬/심상)
                     <div class="setup-section">
                         <h4 data-lang-key="mind">심상</h4>
                         <div class="setting-row align-center">
-                            <label><input id="mindAllToggle" type="checkbox" checked> <span data-lang-key="enableAll">기본 12개 활성화</span></label>
+                            <!--<label><input id="mindAllToggle" type="checkbox" checked> <span data-lang-key="enableAll">기본 12개 활성화</span></label>-->
                         </div>
                         <div id="mindBaseGrid" class="mind-grid"></div>
                         <div class="setting-row">
