--- a/character/character.html
+++ b/character/character.html
@@ -2746,11 +2746,11 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 },
                 'en': {
                     title: 'Recommended Training Stats',
-                    content: 'Status required to achieve maximum effect when character skills are affected by stats. Recommend meeting these requirements if possible. (Based on battle entry)'
+                    content: 'Status required to achieve maximum effect when character skills are affected by stats. Recommend meeting these requirements if possible. (Based on during battle)'
                 },
                 'jp': {
                     title: '推奨育成ステータス',
-                    content: '怪盗のスキルにステータスの影響を受ける形がある場合、最大効果を得るためのステータス。可能であれば満たすことをお勧めします。(戦闘開始時)'
+                    content: '怪盗のスキルにステータスの影響を受ける形がある場合、最大効果を得るためのステータス。可能であれば満たすことをお勧めします。(戦闘中の基準)'
                 }
             },
             'battle-entry': {
