--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ alternate_urls:
     </div>
         
     <!--광고-->
-    <div id="ad-unit-bottom" class="AD-bottom" style="margin-top: 24px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <div id="ad-unit-bottom" class="AD-bottom" style="width:100%; margin-top: 32px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
     <ins class="adsbygoogle"
         style="display:inline-block;width:728px;height:90px"
         data-ad-client="ca-pub-5862324369257695"
@@ -267,7 +267,7 @@ alternate_urls:
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-    <div style="height: 12px;"></div>
+    <div style="height: 20px;"></div>
     <!---->
     <style>
         @media (max-width: 540px) {
