--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ alternate_urls:
                     menu_persona_desc_mobile: "{{ site.data.i18n.en.menu_persona_desc_mobile | default: 'Core persona recommendations and skill settings' }}",
                     menu_revelations_desc_desktop: "{{ site.data.i18n.en.menu_revelations_desc_desktop | default: 'All revelation information at a glance!<br>Match by element and sun/moon/star as desired' }}",
                     menu_revelations_desc_mobile: "{{ site.data.i18n.en.menu_revelations_desc_mobile | default: 'All revelation information at a glance!' }}",
-                    menu_tactic_desc_desktop: "{{ site.data.i18n.en.menu_tactic_desc_desktop | default: 'Create and share your own tactics,<br>achieve high scores in ocean and nightmare' }}",
+                    menu_tactic_desc_desktop: "{{ site.data.i18n.en.menu_tactic_desc_desktop | default: 'Create and share your own tactics,<br>achieve high scores in sea and nightmare' }}",
                     menu_tactic_desc_mobile: "{{ site.data.i18n.en.menu_tactic_desc_mobile | default: 'Create and share your own tactics' }}",
                     menu_article_desc_desktop: "{{ site.data.i18n.en.menu_article_desc_desktop | default: 'Compiled information that the game doesn&#39;t tell you.' }}",
                     menu_article_desc_mobile: "{{ site.data.i18n.en.menu_article_desc_mobile | default: 'Compiled information that the game doesn&#39;t tell you.' }}",
