--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -294,9 +294,10 @@ alternate_urls:
                 <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#72a4f2', 'S6S11F0PUN');kofiwidget2.draw();</script>
             </div>
             
+            <!--
             <div class="bmc-container">
                 <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="absol" data-color="#FFDD00" data-emoji="☕" data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff"></script>
-            </div>
+            </div>-->
             
             <div class="kakao-pay-container" id="kakao-pay-container">
                 <button id="kakaoPayButton" class="kakao-pay-button">Kakaopay</button>
