--- a/character/index.html
+++ b/character/index.html
@@ -591,7 +591,7 @@ redirect_from:
                     // 스포일러 모드에서는 KR 리스트를 원본으로 사용
                     originalLangCharacterList = [...(krCharacterList?.mainParty || []), ...(krCharacterList?.supportParty || [])];
                 } else {
-                    console.log('Using KR data directly');
+                    // console.log('Using KR data directly');
                 }
                 // 한국어인 경우 또는 스포일러 토글이 활성화된 경우 KR 데이터 사용
                 window.characterData = krCharacterData;
@@ -1493,12 +1493,12 @@ redirect_from:
     
     // 추가 안전장치: window.onload에서도 체크
     window.addEventListener('load', async () => {
-        console.log('Window load event fired');
+        // console.log('Window load event fired');
         if (!isInitialized) {
-            console.log('Page not initialized yet, running initialization...');
+            // console.log('Page not initialized yet, running initialization...');
             await initializePageContent();
         } else {
-            console.log('Page already initialized, skipping...');
+            // console.log('Page already initialized, skipping...');
         }
     });
     
