--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 custom_css: [defense-calc]
-custom_js: [tooltip, language-router, defense-calc]
+custom_js: [tooltip, defense-calc]
 custom_data: [tooltip.js, calc/boss.js, calc/defense-data.js]
 permalink: /defense-calc/
 language: kr
