--- a/apps/persona/index.html
+++ b/apps/persona/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 custom_css: [persona]
-custom_js: [tooltip, language-router]
+custom_js: [tooltip]
 custom_data: [wonder/persona.js, tooltip.js, wonder/skills.js]
 permalink: /persona/
 redirect_from: 
