--- a/apps/tactic/tactics.html
+++ b/apps/tactic/tactics.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 custom_css: [tactic, tactic-share]
-custom_js: [tooltip, language-router, tactic-preview]
+custom_js: [tooltip, tactic-preview]
 custom_data: [tooltip.js, characters/characters.js, revelations/revelations.js, tactic/pattern.js, wonder/weapons.js, wonder/persona.js, wonder/skills.js]
 permalink: /tactic/tactics.html
 language: kr
