--- a/index.html
+++ b/index.html
@@ -1137,6 +1137,20 @@ alternate_urls:
         return div.innerHTML;
     }
     function formatDate(date) {
+        // detect current language: URL -> LanguageRouter -> localStorage -> 'kr'
+        let lang = 'kr';
+        try {
+            const urlLang = new URLSearchParams(window.location.search).get('lang');
+            if (urlLang) lang = urlLang.toLowerCase();
+            else if (typeof LanguageRouter !== 'undefined' && LanguageRouter.getCurrentLanguage) {
+                lang = (LanguageRouter.getCurrentLanguage() || 'kr').toLowerCase();
+            } else {
+                const saved = localStorage.getItem('preferredLanguage');
+                if (saved) lang = saved.toLowerCase();
+            }
+        } catch(_) {}
+        if (!['kr','en','jp'].includes(lang)) lang = 'kr';
+
         const now = new Date();
         const diff = now.getTime() - date.getTime();
         const days = Math.floor(diff / (1000 * 60 * 60 * 24));
@@ -1144,13 +1158,20 @@ alternate_urls:
             const hours = Math.floor(diff / (1000 * 60 * 60));
             if (hours === 0) {
                 const minutes = Math.floor(diff / (1000 * 60));
+                if (lang === 'en') return `${minutes} min ago`;
+                if (lang === 'jp') return `${minutes}分前`;
                 return `${minutes}분 전`;
             }
+            if (lang === 'en') return `${hours} hours ago`;
+            if (lang === 'jp') return `${hours}時間前`;
             return `${hours}시간 전`;
         } else if (days < 7) {
+            if (lang === 'en') return `${days} days ago`;
+            if (lang === 'jp') return `${days}日前`;
             return `${days}일 전`;
         } else {
-            return date.toLocaleDateString('ko-KR');
+            const locale = lang === 'en' ? 'en-US' : (lang === 'jp' ? 'ja-JP' : 'ko-KR');
+            return date.toLocaleDateString(locale);
         }
     }
 
